<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/bill_total_with_tax"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="148dp"
        android:text="@string/total_per_person"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:text="@string/overage"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/number_of_people"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/noPeople"
        android:layout_width="100dp"
        android:layout_height="41dp"
        android:layout_marginStart="52dp"
        android:background="#D1FFD3"
        android:ems="10"
        android:hint="No.People"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/goButton"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:onClick="calculations"
        android:text="@string/go"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/noPeople"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Go" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/tip_percent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:text="@string/tip_amount"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/calculatedTip"
        android:layout_width="172dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:background="#B3B1B1"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="tip amount" />

    <TextView
        android:id="@+id/totalTip"
        android:layout_width="172dp"
        android:layout_height="33dp"
        android:layout_marginEnd="16dp"
        android:background="#B3B1B1"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="totalwithtip" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="244dp"
        android:text="@string/total_with_tip"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/perPersTot"
        android:layout_width="120dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:background="#B3B1B1"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextContrastCheck"
        tools:text="per person total" />

    <TextView
        android:id="@+id/overage"
        android:layout_width="120dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:background="#B3B1B1"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="ovg" />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="clearScreen"
        android:text="@string/clear"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/billTotal"
        android:layout_width="180dp"
        android:layout_height="36dp"
        android:layout_marginEnd="16dp"
        android:background="#D1FFD3"
        android:ems="10"
        android:hint=" Total Bill with Tax"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <RadioGroup
        android:id="@+id/radButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <RadioButton
            android:id="@+id/twelve"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:onClick="radioTip"
            android:text="@string/_12" />

        <RadioButton
            android:id="@+id/fifteen"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:onClick="radioTip"
            android:text="@string/_15" />

        <RadioButton
            android:id="@+id/eighteen"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:onClick="radioTip"
            android:text="@string/_18" />

        <RadioButton
            android:id="@+id/twenty"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="radioTip"
            android:text="@string/_20" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>